--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".AddNGOActivity"></activity>
         <activity android:name=".StatsReportActivity" />
         <activity android:name=".DiseaseStatsActivity" />
         <activity android:name=".SymptomsActivity" />
